Поправить код стайл #2