@@ -35,7 +35,7 @@ class InMemoryTaskManagerTest {
 
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач.");
-        assertEquals(task, tasks.get(0), "Задачи не совпадают.");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают.");
     }
 
     @Test
@@ -53,7 +53,7 @@ class InMemoryTaskManagerTest {
 
         assertNotNull(epics, "Задачи не возвращаются.");
         assertEquals(1, epics.size(), "Неверное количество задач.");
-        assertEquals(epic, epics.get(0), "Задачи не совпадают.");
+        assertEquals(epic, epics.getFirst(), "Задачи не совпадают.");
     }
 
     @Test
@@ -73,7 +73,7 @@ class InMemoryTaskManagerTest {
 
         assertNotNull(subtasks, "Задачи не возвращаются.");
         assertEquals(1, subtasks.size(), "Неверное количество задач.");
-        assertEquals(subtask, subtasks.get(0), "Задачи не совпадают.");
+        assertEquals(subtask, subtasks.getFirst(), "Задачи не совпадают.");
     }
 
 
@@ -137,7 +137,6 @@ class InMemoryTaskManagerTest {
         taskManager.getSubtaskById(41);
         taskManager.getSubtaskById(42);
         taskManager.getSubtaskById(43);
-        final List<Task> history = taskManager.getHistory();
         taskManager.deleteEpics();
         final List<Task> history1 = taskManager.getHistory();
         assertEquals(new ArrayList<>(), taskManager.getListOfEpics(), "Задачи не удалились");
@@ -184,7 +183,7 @@ class InMemoryTaskManagerTest {
         taskManager.createTask(task);
         task.setStatus(Status.IN_PROGRESS);
         taskManager.updateTask(task);
-        assertEquals(Status.IN_PROGRESS, taskManager.getTaskById(1).getStatus(), "Задача не обновалась");
+        assertEquals(Status.IN_PROGRESS, taskManager.getTaskById(1).getStatus(), "Задача не обновилась");
         assertEquals(1, taskManager.getListOfTasks().size(), "Задача добавилась как новая");
     }
 
@@ -194,7 +193,7 @@ class InMemoryTaskManagerTest {
         taskManager.createEpic(epic);
         epic.setStatus(Status.IN_PROGRESS);
         taskManager.updateEpic(epic);
-        assertEquals(Status.IN_PROGRESS, taskManager.getEpicById(1).getStatus(), "Задача не обновалась");
+        assertEquals(Status.IN_PROGRESS, taskManager.getEpicById(1).getStatus(), "Задача не обновилась");
         assertEquals(1, taskManager.getListOfEpics().size(), "Задача добавилась как новая");
     }
 
